tests/v2.1-legacy/invalid/to_user_aif_body.aif
# VIOLATION: TO:USER but body is AIF-structured instead of natural language
# Expected: rejected — when receiver is a human user, output must be natural language

@AIF/2.0
FROM: agent_pm
TO: USER
TYPE: DELIVER
ID: D001
REF: T001
REPORT_TO: USER
---
STATUS: COMPLETED
SUMMARY: "Task done"
ARTIFACTS: [report.md]
